data/all_generated_tests/raw_wast_tests/if_EdgeCaseFailuresinbr_table_2037.wast
;; 8. **Test Name: `br_table` in Infinite Loop Construct**    - **Description**: Encapsulate an `if` with a `br_table` within a loop that theoretically may never exit. This tests if such infinite loops are managed in a way that doesn’t break the engine.    - **Constraint Checked**: Handling of infinite loops with internal conditional `br_table`.    - **Relation to Edge Case**: Ensures memory management and control flow integrity with potentially runaway loops.

(assert_invalid
  (module
    (func $test
      (loop (block
        (if (result i32)
          (i32.const 1)
          (then (br_table 0 0))
          (else (i32.const 0))
        )
      ))
    )
  )
  "type mismatch"
)